@@ -46,6 +46,7 @@ glibc (2.3.6-2) UNRELEASED; urgency=low
   * Fix the strcasestr() examples in the manual.  (Closes: #289853)
   * Install libc_nonshared.a in /usr/lib/nptl, and fix the location 
     of the static libraries of the NPTL ld scripts. (Closes: #347762)
+  * Update debian/ files for GNU/kFreeBSD.  (Closes: #351638)
 
  -- Clint Adams <schizo@debian.org>  Sun, 12 Feb 2006 11:04:38 -0500
 
